switched to Java 11, execption handling adapted to Java 11